--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,11 @@
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <title>React App</title>
+    <link
+    rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
